--- a/web-views/build.gradle
+++ b/web-views/build.gradle
@@ -144,11 +144,12 @@ def toolSpec = { String name, String mainClass ->
 }
 
 final List<ToolSpec> toolSpecs = [
-        toolSpec('parseTreeFileMaker', 'ParseTreeFileMakerCli'),
         toolSpec('astFileMaker', 'AstFileMakerCli'),
         toolSpec('convertToGroovy', 'ConvertToGroovy'),
         toolSpec('lexer', 'LexerTool'),
-        toolSpec('parser', 'ParserTool')
+        toolSpec('parser', 'ParserTool'),
+        toolSpec('parseTreeFileMaker', 'ParseTreeFileMakerCli'),
+        toolSpec('runTemplate', 'RunTemplate')
 ]
 
 toolSpecs.each { spec ->
