--- a/settings.gradle
+++ b/settings.gradle
@@ -26,7 +26,7 @@ pluginManagement {
 
 rootProject.name = 'groowt'
 
-include 'cli', 'groowt-gradle', 'views', 'view-components', 'web-views'
+include 'cli', 'groowt-gradle', 'groowt-gradle-model', 'views', 'view-components', 'web-views'
 
 file('util').eachDir {
     include it.name
