Gradle logging plugin for easier logging in subprojects.

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -17,6 +17,10 @@ gradlePlugin {
             id = 'GroowtAntlrPlugin'
             implementationClass = 'groowt.gradle.antlr.GroowtAntlrPlugin'
         }
+        create('groowtLogging') {
+            id = 'groowt-logging'
+            implementationClass = 'groowt.gradle.logging.GroowtLoggingPlugin'
+        }
     }
 }
 
