--- a/groowt-gradle-model/build.gradle
+++ b/groowt-gradle-model/build.gradle
@@ -1,16 +1,7 @@
 plugins {
-    id 'GroowtConventions'
+    id 'groowt-conventions'
     id 'java-library'
-    id 'maven-publish'
-}
-
-group = 'groowt'
-version = '0.1.0'
-
-repositories {
-    maven {
-        url 'https://repo.gradle.org/gradle/libs-releases'
-    }
+    id 'groowt-publish'
 }
 
 publishing {
