--- a/groowt-gradle/build.gradle
+++ b/groowt-gradle/build.gradle
@@ -1,27 +1,21 @@
 plugins {
-    id 'GroowtConventions'
+    id 'groowt-conventions'
     id 'java-gradle-plugin'
-    id 'com.jessebrault.jbarchiva' version '0.1.0'
-    id 'maven-publish'
+    id 'groowt-publish'
 }
-
-group = 'groowt'
-version = '0.1.0'
 
 repositories {
     mavenCentral()
-//    maven {
-//        url 'https://repo.gradle.org/gradle/libs-releases'
-//    }
 }
 
 dependencies {
-    implementation libs.groovy, project(':groowt-gradle-model')
+    implementation libs.groovy
+    implementation project(':groowt-gradle-model')
 }
 
 gradlePlugin {
     plugins {
-        groowtGradle {
+        create('groowtGradle') {
             id = 'groowt-gradle'
             implementationClass = 'groowt.gradle.GroowtGradlePlugin'
         }
