Working on mismatched component error analysis and component-type ClassNode resolution.

--- a/web-views/build.gradle
+++ b/web-views/build.gradle
@@ -35,6 +35,7 @@ dependencies {
             libs.groovy,
             libs.groovy.templates,
             libs.antlr.runtime,
+            libs.classgraph,
             project(':view-components'),
             project(':views')
     )
