--- a/util/di/build.gradle
+++ b/util/di/build.gradle
@@ -8,6 +8,7 @@ plugins {
 
 dependencies {
     api libs.jakarta.inject
+    api libs.groovy
     compileOnlyApi libs.jetbrains.anotations
     implementation libs.slf4j.api, libs.groovy
 }
