--- a/util/fp/build.gradle
+++ b/util/fp/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     compileOnlyApi libs.jetbrains.anotations
 }
 
+java {
+    withSourcesJar()
+}
+
 jar {
     archiveBaseName = 'groowt-util-fp'
 }
