--- a/util/di/build.gradle
+++ b/util/di/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     implementation libs.slf4j.api, libs.groovy
 }
 
+java {
+    withSourcesJar()
+}
+
 jar {
     archiveBaseName = 'groowt-util-di'
 }
