--- a/web-views/build.gradle
+++ b/web-views/build.gradle
@@ -195,6 +195,10 @@ test {
     jvmArgs '-XX:+EnableDynamicAgentLoading' // for mockito/bytebuddy
 }
 
+java {
+    withSourcesJar()
+}
+
 publishing {
     publications {
         create('webViews', MavenPublication) {
