Groovyc can now accept .wvc files.

--- a/web-views/build.gradle
+++ b/web-views/build.gradle
@@ -133,6 +133,16 @@ tasks.register('toolsJar', Jar) {
     dependsOn tasks.named('jar')
 }
 
+tasks.register('uberJar', Jar) {
+    group = 'build'
+    archiveBaseName = 'web-views-uber'
+    from sourceSets.main.output
+    from sourceSets.main.runtimeClasspath.filter(File.&exists).collect {
+        it.isDirectory() ? it : zipTree(it)
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 @NullCheck
 class ToolSpec {
 
