--- a/web-views/build.gradle
+++ b/web-views/build.gradle
@@ -34,6 +34,13 @@ sourceSets {
         java {
             compileClasspath += sourceSets.main.output
             runtimeClasspath += sourceSets.main.output
+            srcDirs = [file('sketching/java')]
+        }
+        groovy {
+            srcDirs = [file('sketching/groovy')]
+        }
+        resources {
+            srcDirs = [file('sketching/resources')]
         }
     }
     tools {
@@ -80,7 +87,7 @@ dependencies {
     toolsApi libs.picocli
     toolsImplementation libs.groovy.console
 
-    sketchingApi libs.groovy
+    sketchingImplementation libs.groovy
 }
 
 java {
