--- a/web-view-components-compiler/build.gradle
+++ b/web-view-components-compiler/build.gradle
@@ -152,6 +152,7 @@ final List<ToolSpec> toolSpecs = [
         toolSpec('lexer', 'LexerTool'),
         toolSpec('parser', 'ParserTool'),
         toolSpec('parseTreeFileMaker', 'ParseTreeFileMakerCli'),
+        toolSpec('tokenizeWvc', 'TokenizeWvc'),
         toolSpec('tokensFileMaker', 'TokensFileMakerCli')
 ]
 
